--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "DataDashboard",
   "version": "0.1.0",
   "description": "Data dashboard of various sources.",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -16,15 +16,19 @@
     "dashboard"
   ],
   "author": "Riley S. McCloskey",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rsmccc/data-dashboard/issues"
-  },
-  "homepage": "https://github.com/rsmccc/data-dashboard",
+  "homepage": "http://db.rsmccloskey.me",
   "dependencies": {
     "d3": "^3.5.16",
-    "express": "^4.13.4",
-    "http": "0.0.0",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0",
     "requirejs": "^2.1.22"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.2.37"
   }
 }
