--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "DataDashboard",
   "version": "0.1.0",
   "description": "Data dashboard of various sources.",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -18,15 +18,16 @@
   "author": "Riley S. McCloskey",
   "homepage": "http://db.rsmccloskey.me",
   "dependencies": {
-    "d3": "^3.5.16",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "d3": "^3.5.16",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.1.7",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "requirejs": "^2.1.22"
+    "requirejs": "^2.1.22",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.2.37"
